--- a/landing_lit.html
+++ b/landing_lit.html
@@ -13,7 +13,7 @@
         <a-scene xr-mode-ui="enabled: false">
             <a-sky src="./images/lectureUp.jpg" rotation="0 -90 0"></a-sky>
             <header id="header" class="header">
-                <div class="time">13:10</div>
+                <div id="gtime" class="time"></div>
                 <div id="mtitle" class="mtitle"></div>
                 <div class="menu">        
                     <div id="burger" class="barburger" style="display: none;">
