--- a/landing_lit.html
+++ b/landing_lit.html
@@ -11,7 +11,7 @@
     <div class="blackin"></div>
     <three60>
         <a-scene xr-mode-ui="enabled: false">
-            <a-sky src="./images/lectureUp.jpg" rotation="0 -90 0"></a-sky>
+            <a-sky src="./images/landing_lit.JPG" rotation="0 -90 0"></a-sky>
             <header id="header" class="header">
                 <div id="gtime" class="time"></div>
                 <div id="mtitle" class="mtitle"></div>
