--- a/awake.html
+++ b/awake.html
@@ -62,7 +62,7 @@
                         <div class="descriptive" id="description">
                             Opening your eyes you find yourself lying on the floor of a dimly lit lecture theatre.  
                             You have no idea what time it is or how long you have remaining to submit your coursework. 
-                            Go back to <a href='index.html'>sleep</a> or get <a class='activateBtn' data-target='UP' href='#'>up</a>
+                            Go back to <a href='index.html'>sleep</a> or get <a id="dUP" class='activateBtn' data-target='UP' href='#'>up</a>
                         </div>
                     </div> 
                     <div class="inventory">
