--- a/duct.html
+++ b/duct.html
@@ -59,7 +59,7 @@
                             Landing
                         </div>
                         <div class="descriptive" id="description">
-                            Above you the air conditioning <a class='activateBtn' data-target='UP' href='#'>ducts</a> fan out over the room.  To the <a class='activateBtn' data-target='W' href='#'>west</a> is the landing at the top of the stairs.  
+                            Above you the air conditioning <a id="dUP" class='activateBtn' data-target='UP' href='#'>ducts</a> fan out over the room.  To the <a id="dW" class='activateBtn' data-target='W' href='#'>west</a> is the landing at the top of the stairs.  
                         </div>
                     </div> 
                     <div class="inventory">
