--- a/landing_lit.html
+++ b/landing_lit.html
@@ -59,9 +59,9 @@
                             Landing
                         </div>
                         <div class="descriptive" id="description">
-                            You feel rather proud of yourself for facing your fears.  To the <a class='activateBtn' data-target='W' href='#'>west</a> there is the upper exit door.
-                            To the <a class='activateBtn' data-target='E' href='#'>east</a> is the back row and the low overhead ducts. 
-                            Behind you the stairs would return you <a class='activateBtn' data-target='DOWN' href='#'>down</a> into the main body of the lecture theatre.
+                            You feel rather proud of yourself for facing your fears.  To the <a id="dW" class='activateBtn' data-target='W' href='#'>west</a> there is the upper exit door.
+                            To the <a id="dE" class='activateBtn' data-target='E' href='#'>east</a> is the back row and the low overhead ducts. 
+                            Behind you the stairs would return you <a id="dDOWN" class='activateBtn' data-target='DOWN' href='#'>down</a> into the main body of the lecture theatre.
                         </div>
                     </div> 
                     <div class="inventory">
