--- a/lectureUp.html
+++ b/lectureUp.html
@@ -59,8 +59,8 @@
                             Lecture Up
                         </div>
                         <div class="descriptive" id="description">
-                            Standing in the semi dark, the main lights off, it is hard to see properly but the stairs to your <a class='activateBtn' data-target='E' href='#'>east</a> go 
-                         <a class='activateBtn' data-target='UP' href='#'>up</a> and <a class='activateBtn' data-target='DOWN' href='#'>down</a>.  There are dark rows of seating all around
+                            Standing in the semi dark, the main lights off, it is hard to see properly but the stairs to your <a id="dE" class='activateBtn' data-target='E' href='#'>east</a> go 
+                         <a id="dUP" class='activateBtn' data-target='UP' href='#'>up</a> and <a id="dDOWN" class='activateBtn' data-target='DOWN' href='#'>down</a>.  There are dark rows of seating all around
                            and the side lighting makes everything look a bit eerie, especially the massive air conditioning ducts above your head.
                         </div>
                     </div> 
