--- a/lecturn.html
+++ b/lecturn.html
@@ -59,7 +59,7 @@
                         </div>
                         <div class="descriptive" id="description">
                             A laptop sits here, locked with a password prompt.  This area seems quite dusty and unused but there is
-                            a well worn path in the carpet which leads back <a class='activateBtn' data-target='W' href='#'>west</a> across the main stage.  Obviously created by animated lecturing.
+                            a well worn path in the carpet which leads back <a id="dW" class='activateBtn' data-target='W' href='#'>west</a> across the main stage.  Obviously created by animated lecturing.
                         </div>
                     </div> 
                     <div class="inventory">
