--- a/lost_property.html
+++ b/lost_property.html
@@ -59,7 +59,7 @@
                         </div>
                         <div class="descriptive" id="description">
                             A table full of useful stuff!  If only I had an inventory system and could carry some of this around.  
-                            I'm sure I could use it to get out of here.  To your <a class='activateBtn' data-target='S' href='#'>south</a> is the main stage.
+                            I'm sure I could use it to get out of here.  To your <a id="dS" class='activateBtn' data-target='S' href='#'>south</a> is the main stage.
                         </div>
                     </div> 
                     <div class="inventory">
