--- a/maze.html
+++ b/maze.html
@@ -59,12 +59,14 @@
                         </div>
                         <div class="descriptive" id="description">
                             It is dark, very dark.
-                            <a class='activateBtn' data-target='UP' href='#'>up</a>
-                            <a class='activateBtn' data-target='DOWN' href='#'>down</a>
-                            <a class='activateBtn' data-target='N' href='#'>north</a>
-                            <a class='activateBtn' data-target='E' href='#'>east</a>
-                            <a class='activateBtn' data-target='S' href='#'>south</a>
-                            <a class='activateBtn' data-target='W' href='#'>west</a>                            
+                            <a id="dUP" class='activateBtn' data-target='UP' href='#'>up</a>
+                            <a id="dDOWN" class='activateBtn' data-target='DOWN' href='#'>down</a>
+                            <a id="dN" class='activateBtn' data-target='N' href='#'>north</a>
+                            <a id="dE" class='activateBtn' data-target='E' href='#'>east</a>
+                            <a id="dS" class='activateBtn' data-target='S' href='#'>south</a>
+                            <a id="dW" class='activateBtn' data-target='W' href='#'>west</a>                            
+                            <a id="dUSE" class='activateBtn' data-target='USE' href='#'>use</a> 
+                            <a id="dLOOK" class='activateBtn' data-target='LOOK' href='#'>look</a>
                         </div>
                     </div> 
                     <div class="inventory">
