--- a/maze_a.html
+++ b/maze_a.html
@@ -60,7 +60,7 @@
                         <div class="descriptive" id="description">
                             You emerge into the cool air of a rooftop terrace.  There seems to be no way of getting home from here but 
                             stay and sit and watch the stars rise and traverse across the night sky.
-                            Or you could go back <a class='activateBtn' data-target='E' href='#'>east</a> and try and find your way out.
+                            Or you could go back <a id="dE" class='activateBtn' data-target='E' href='#'>east</a> and try and find your way out.
                         </div>
                     </div> 
                     <div class="inventory">
