--- a/maze_d.html
+++ b/maze_d.html
@@ -60,7 +60,7 @@
                         <div class="descriptive" id="description">
                             Emerging from the dark you find yourself falling a short distance and hitting something hard.  It is so bright it takes you a few moments to adjust.
                             When you do your second favourite fear kicks in.  You have somehow landed on the top of a hot air balloon, hundreds of feet off the ground.
-                            You can hang here as long as you can or let go and drop <a class='activateBtn' data-target='DOWN' href='#'>down</a> and see what happens.
+                            You can hang here as long as you can or let go and drop <a id="dDOWN" class='activateBtn' data-target='DOWN' href='#'>down</a> and see what happens.
                         </div>
                     </div> 
                     <div class="inventory">
