--- a/maze_e.html
+++ b/maze_e.html
@@ -59,7 +59,7 @@
                         </div>
                         <div class="descriptive" id="description">
                             It is still dark but there are pinpoints of light and an underwater blueness lights an enourmous sphere where sharks are swimming by.
-                            You feel like you are holding your breath and would have to swim <a class='activateBtn' data-target='UP' href='#'>up</a> to take your next lung full.
+                            You feel like you are holding your breath and would have to swim <a id="dUP" class='activateBtn' data-target='UP' href='#'>up</a> to take your next lung full.
                         </div>
                     </div> 
                     <div class="inventory">
