--- a/maze_j.html
+++ b/maze_j.html
@@ -59,10 +59,10 @@
                         </div>
                         <div class="descriptive" id="description">
                             Despite the dark - from the sound you can detect it is more open.  Feeling around you realise there are passages 
-                            <a class='activateBtn' data-target='N' href='#'>north</a>,
-                            <a class='activateBtn' data-target='E' href='#'>east</a>, 
-                            <a class='activateBtn' data-target='S' href='#'>south</a> and 
-                            <a class='activateBtn' data-target='W' href='#'>west</a>                            
+                            <a id="dN" class='activateBtn' data-target='N' href='#'>north</a>,
+                            <a id="dE" class='activateBtn' data-target='E' href='#'>east</a>, 
+                            <a id="dS" class='activateBtn' data-target='S' href='#'>south</a> and 
+                            <a id="dW" class='activateBtn' data-target='W' href='#'>west</a>                            
                         </div>
                     </div> 
                     <div class="inventory">
