--- a/maze_m.html
+++ b/maze_m.html
@@ -60,7 +60,7 @@
                         <div class="descriptive" id="description">
                             Coming out of the darkness you are greated by a cool, shaded courtyard.  
                             A fountain under the orange trees soothingly sprays water that cools the air. Perhaps you should forget uni and stay here for ever.
-                            Or you can return <a class='activateBtn' data-target='E' href='#'>east</a> and continue exploring the maze.         
+                            Or you can return <a id="dE" class='activateBtn' data-target='E' href='#'>east</a> and continue exploring the maze.         
                         </div>
                     </div> 
                     <div class="inventory">
