--- a/maze_n.html
+++ b/maze_n.html
@@ -58,7 +58,7 @@
                             Maze
                         </div>
                         <div class="descriptive" id="description">
-                            It is dark, the passageway travels only in an <a class='activateBtn' data-target='E' href='#'>east</a> - <a class='activateBtn' data-target='W' href='#'>west</a> direction.                           
+                            It is dark, the passageway travels only in an <a id="dE" class='activateBtn' data-target='E' href='#'>east</a> - <a id="dW" class='activateBtn' data-target='W' href='#'>west</a> direction.                           
                         </div>
                     </div> 
                     <div class="inventory">
