--- a/maze_p.html
+++ b/maze_p.html
@@ -58,9 +58,9 @@
                             Maze
                         </div>
                         <div class="descriptive" id="description">
-                            You can discern three possible routes through the dark <a class='activateBtn' data-target='N' href='#'>north</a>, 
-                            <a class='activateBtn' data-target='S' href='#'>south</a> and 
-                            <a class='activateBtn' data-target='W' href='#'>west</a>.                          
+                            You can discern three possible routes through the dark <a id="dN" class='activateBtn' data-target='N' href='#'>north</a>, 
+                            <a id="dS" class='activateBtn' data-target='S' href='#'>south</a> and 
+                            <a id="dW" class='activateBtn' data-target='W' href='#'>west</a>.                          
                         </div>
                     </div> 
                     <div class="inventory">
