--- a/maze_q.html
+++ b/maze_q.html
@@ -58,8 +58,8 @@
                             Maze
                         </div>
                         <div class="descriptive" id="description">
-                            It is dark, to the <a class='activateBtn' data-target='N' href='#'>north</a> is a vague glimmer of light and there is the gentle tinkling sound of running water coming from the <a class='activateBtn' data-target='W' href='#'>west</a>.
-                            It feels like the passage continues to the <a class='activateBtn' data-target='S' href='#'>south</a>.
+                            It is dark, to the <a id="dN" class='activateBtn' data-target='N' href='#'>north</a> is a vague glimmer of light and there is the gentle tinkling sound of running water coming from the <a id="dW" class='activateBtn' data-target='W' href='#'>west</a>.
+                            It feels like the passage continues to the <a id="dS" class='activateBtn' data-target='S' href='#'>south</a>.
                         </div>
                     </div> 
                     <div class="inventory">
