--- a/maze_r.html
+++ b/maze_r.html
@@ -58,8 +58,8 @@
                             Maze
                         </div>
                         <div class="descriptive" id="description">
-                            It is dark.  To the <a class='activateBtn' data-target='N' href='#'>north</a> you can hear the sound of bubbles rising through a water column.  
-                            An exit leads <a class='activateBtn' data-target='S' href='#'>south</a> and another to the <a class='activateBtn' data-target='W' href='#'>west</a>.
+                            It is dark.  To the <a id="dN" class='activateBtn' data-target='N' href='#'>north</a> you can hear the sound of bubbles rising through a water column.  
+                            An exit leads <a id="dS" class='activateBtn' data-target='S' href='#'>south</a> and another to the <a id="dW" class='activateBtn' data-target='W' href='#'>west</a>.
                         </div>
                     </div> 
                     <div class="inventory">
