--- a/maze_s.html
+++ b/maze_s.html
@@ -59,7 +59,7 @@
                         </div>
                         <div class="descriptive" id="description">
                             The dark is pushed aside by a rushing foul smell and crushing downwards force.  
-                            Then the crude gurgle of a grue laugh fades and is replaced by a distant sound to the <a class='activateBtn' data-target='E' href='#'>east</a>.
+                            Then the crude gurgle of a grue laugh fades and is replaced by a distant sound to the <a id="dE" class='activateBtn' data-target='E' href='#'>east</a>.
                         </div>
                     </div> 
                     <div class="inventory">
