--- a/maze_t.html
+++ b/maze_t.html
@@ -58,8 +58,8 @@
                             Maze
                         </div>
                         <div class="descriptive" id="description">
-                            There is no light, but the air carries the smell of the early morning desert.  It feels like the ducting has exits to the <a class='activateBtn' data-target='N' href='#'>north</a>, 
-                            <a class='activateBtn' data-target='E' href='#'>east</a> and <a class='activateBtn' data-target='W' href='#'>west</a>.
+                            There is no light, but the air carries the smell of the early morning desert.  It feels like the ducting has exits to the <a id="dN" class='activateBtn' data-target='N' href='#'>north</a>, 
+                            <a id="dE" class='activateBtn' data-target='E' href='#'>east</a> and <a id="dW" class='activateBtn' data-target='W' href='#'>west</a>.
                         </div>
                     </div> 
                     <div class="inventory">
