--- a/maze_v.html
+++ b/maze_v.html
@@ -60,8 +60,8 @@
                         <div class="descriptive" id="description">
                             This Grue is preceded by the smell of a food recycling truck in midsummer.  You are knocked to the floor.
                             The darkness becomes blacker still but the expected downwards crushing is exchanged with
-                            a <a class='activateBtn' data-target='N' href='#'>northerly</a> yanking and a 
-                            sideways stretching to the<a class='activateBtn' data-target='E' href='#'>east</a>.
+                            a <a id="dN" class='activateBtn' data-target='N' href='#'>northerly</a> yanking and a 
+                            sideways stretching to the<a id="dE" class='activateBtn' data-target='E' href='#'>east</a>.
                         </div>
                     </div> 
                     <div class="inventory">
