--- a/maze_w.html
+++ b/maze_w.html
@@ -59,9 +59,9 @@
                         </div>
                         <div class="descriptive" id="description">
                             The hard triangular crust of an abandoned sandwich curls on the duct beneath your hand.  Reaching beyond you can feel exits to the 
-                            <a class='activateBtn' data-target='N' href='#'>north</a>,
-                            <a class='activateBtn' data-target='E' href='#'>east</a> and
-                            <a class='activateBtn' data-target='S' href='#'>south</a>.
+                            <a id="dN" class='activateBtn' data-target='N' href='#'>north</a>,
+                            <a id="dE" class='activateBtn' data-target='E' href='#'>east</a> and
+                            <a id="dS" class='activateBtn' data-target='S' href='#'>south</a>.
                         </div>
                     </div> 
                     <div class="inventory">
