--- a/maze_x.html
+++ b/maze_x.html
@@ -59,7 +59,7 @@
                         </div>
                         <div class="descriptive" id="description">
                             The dark does not hide you from the Grue.  You are crushed into the pit of blackness, 
-                            suffocating as you spiral <a class='activateBtn' data-target='DOWN' href='#'>down</a> 
+                            suffocating as you spiral <a id="dDOWN" class='activateBtn' data-target='DOWN' href='#'>down</a> 
                             towards that noise, always that noise.                            
                         </div>
                     </div> 
