--- a/stairs7.html
+++ b/stairs7.html
@@ -60,8 +60,8 @@
                         <div class="descriptive" id="description">
                             You are standing on the offset lecture theatre stairs.  The
                             further you get from the side lighting the dimmer it seems.  You don't have enough light to see clearly into the rows on either side.  
-                            <a class='activateBtn' data-target='DOWN' href='#'>Down</a> seems to be best lit and would head towards the lecture floor.  
-                            <a class='activateBtn' data-target='UP' href='#'>Up</a> and to the back seems to be much darker than it should be and was that the sound of a seat flipping up?                            
+                            <a id="dDOWN" class='activateBtn' data-target='DOWN' href='#'>down</a> seems to be best lit and would head towards the lecture floor.  
+                            <a id="dUP" class='activateBtn' data-target='UP' href='#'>Up</a> and to the back seems to be much darker than it should be and was that the sound of a seat flipping up?                            
                         </div>
                     </div> 
                     <div class="inventory">
