--- a/stairs_8_lit.html
+++ b/stairs_8_lit.html
@@ -58,8 +58,8 @@
                             Stairs 8
                         </div>
                         <div class="descriptive" id="description">
-                            The stairs are more manageable with the lights on. Looking <a class='activateBtn' data-target='DOWN' href='#'>down</a> you can see the lecture theatre 
-                            and seating.  The light has banished the dark shadows from the back rows.  Continuing <a class='activateBtn' data-target='UP' href='#'>up</a> will take you to the back exit.
+                            The stairs are more manageable with the lights on. Looking <a id="dDOWN" class='activateBtn' data-target='DOWN' href='#'>down</a> you can see the lecture theatre 
+                            and seating.  The light has banished the dark shadows from the back rows.  Continuing <a id="dUP" class='activateBtn' data-target='UP' href='#'>up</a> will take you to the back exit.
                         </div>
                     </div> 
                     <div class="inventory">
