--- a/lecture_stage_lit.html
+++ b/lecture_stage_lit.html
@@ -58,10 +58,10 @@
                             Lecture Stage
                         </div>
                         <div class="descriptive" id="description">
-                            With the lights on your fears of what lurks in the dark have gone.  To your <a class='activateBtn' data-target='USE' href='#'>north</a> you can use the light switch.  
-                            To the <a class='activateBtn' data-target='W' href='#'>west</a> you can try and open the main door. 
-                            Across the stage to the <a class='activateBtn' data-target='E' href='#'>east</a> is the lecturn.
-                            From here the stairs rise <a class='activateBtn' data-target='UP' href='#'>up</a> to the back of the lecture theatre.
+                            With the lights on your fears of what lurks in the dark have gone.  To your <a id="dUSE" class='activateBtn' data-target='USE' href='#'>north</a> you can use the light switch.  
+                            To the <a id="dW" class='activateBtn' data-target='W' href='#'>west</a> you can try and open the main door. 
+                            Across the stage to the <a id="dE" class='activateBtn' data-target='E' href='#'>east</a> is the lecturn.
+                            From here the stairs rise <a id="dUP" class='activateBtn' data-target='UP' href='#'>up</a> to the back of the lecture theatre.
                         </div>
                     </div> 
                     <div class="inventory">
