--- a/main_door.html
+++ b/main_door.html
@@ -59,9 +59,9 @@
                             Main door
                         </div>
                         <div class="descriptive" id="description">
-                            I quiet but persistant "loading" noise can be heard coming from the door to your <a class='activateBtn' data-target='W' href='#'>west</a>.
-                              The lecture stage is back the way you came to the <a class='activateBtn' data-target='E' href='#'>east</a>.
-                              To the <a class='activateBtn' data-target='N' href='#'>north</a> there is a light switch.
+                            A quiet but persistant "loading" noise can be heard coming from the door to your <a id="dW" class='activateBtn' data-target='W' href='#'>west</a>.
+                              The lecture stage is to the <a id="dE" class='activateBtn' data-target='E' href='#'>east</a>.
+                              To the <a id="dN" class='activateBtn' data-target='N' href='#'>north</a> there is a light switch.
                         </div>
                     </div> 
                     <div class="inventory">
