--- a/maze_h.html
+++ b/maze_h.html
@@ -58,8 +58,8 @@
                             Maze
                         </div>
                         <div class="descriptive" id="description">
-                            Pulling yourself up into the duct your body blocks what little light there is coming in from the hatch <a class='activateBtn' data-target='DOWN' href='#'>down</a> below you.
-                            The only sensible way to go seems to be <a class='activateBtn' data-target='S' href='#'>south</a>.  Going <a class='activateBtn' data-target='N' href='#'>north</a> would lead to a big choppy fan.
+                            Pulling yourself up into the duct your body blocks what little light there is coming in from the hatch <a id="dDOWN" class='activateBtn' data-target='DOWN' href='#'>down</a> below you.
+                            The only sensible way to go seems to be <a id="dS" class='activateBtn' data-target='S' href='#'>south</a>.  Going <a id="dN" class='activateBtn' data-target='N' href='#'>north</a> would lead to a big choppy fan.
                             It is dark, very dark. You are scared again.
                         </div>
                     </div> 
