--- a/lectern.html
+++ b/lectern.html
@@ -10,7 +10,7 @@
     <div class="blackin"></div>
     <three60>
         <a-scene xr-mode-ui="enabled: false">
-            <a-sky src="./images/lecturn.jpg" rotation="0 -90 0"></a-sky>
+            <a-sky src="./images/lectern.jpg" rotation="0 -90 0"></a-sky>
             <header id="header" class="header">
                 <div id="gtime" class="time"></div>
                 <div id="mtitle" class="mtitle"></div>
@@ -55,11 +55,11 @@
                     </div>
                     <div class="descriptive" id="info">
                         <div class="descriptive" id="title">
-                            Lecturn
+                            Lectern
                         </div>
                         <div class="descriptive" id="description">
-                            A laptop sits here, locked with a password prompt.  This area seems quite dusty and unused but there is
-                            a well worn path in the carpet which leads back <a id="dW" class='activateBtn' data-target='W' href='#'>west</a> across the main stage.  Obviously created by animated lecturing.
+                            A laptop sits here, self-absorbed in a 'blue screen of death'.  The lectern has a screen which shows the time.  This area seems quite dusty and unused but there is
+                            a well worn path in the carpet leading back <a id="dW" class='activateBtn' data-target='W' href='#'>west</a> across the main stage.  Obviously created by animated lecturing.
                         </div>
                     </div> 
                     <div class="inventory">
