--- a/lecturestage.html
+++ b/lecturestage.html
@@ -59,7 +59,7 @@
                         </div>
                         <div class="descriptive" id="description">
                             You are standing in the dark on the main stage of the sizesable lecture theatre.  To your <a id="dW" class='activateBtn' data-target='W' href='#'>west</a> is a door.  
-                            To your <a id="dE" class='activateBtn' data-target='E' href='#'>east</a> is the lecturn, shrowded in shadows.
+                            To your <a id="dE" class='activateBtn' data-target='E' href='#'>east</a> is the lectern, shrowded in shadows.
                             <a id="dN" class='activateBtn' data-target='N' href='#'>North</a> is a table filled with lost property.  To the <a id="dS" class='activateBtn' data-target='S' href='#'>south</a> are the stairs leading to the seats.
                         </div>
                     </div> 
