--- a/stairs3.html
+++ b/stairs3.html
@@ -60,7 +60,7 @@
                         <div class="descriptive" id="description">
                             The bottom of the stairs.  To your <a id="dN" class='activateBtn' data-target='N' href='#'>north</a> is the main stage.  
                             To the <a class='activateBtn' data-target='NW' href='#'>north west</a> you can see the main door. 
-                            In the other direction to the <a class='activateBtn' data-target='NE' href='#'>north east</a> is the lecturn.  It gets darker in that direction.
+                            In the other direction to the <a class='activateBtn' data-target='NE' href='#'>north east</a> is the lectern.  It gets darker in that direction.
                             From here the stairs rise <a id="dUP" class='activateBtn' data-target='UP' href='#'>up</a> to more seats and the back of the lecture theatre.
                         </div>
                     </div> 
