--- a/lecture.html
+++ b/lecture.html
@@ -26,6 +26,7 @@
             window.location.href="awake.html";
         }
     </script>
+    <script src="logic.js"></script>
     <!--<script src="utility.js"></script>-->
 </body>
 </html>
