--- a/maze_f.html
+++ b/maze_f.html
@@ -58,12 +58,9 @@
                             Maze
                         </div>
                         <div class="descriptive" id="description">
-                            It is dark, very dark.
-                            <a id="dUP" class='activateBtn' data-target='UP' href='#'>up</a>
-                            <a id="dDOWN" class='activateBtn' data-target='DOWN' href='#'>down</a>
-                            <a id="dN" class='activateBtn' data-target='N' href='#'>north</a>
-                            <a id="dE" class='activateBtn' data-target='E' href='#'>east</a>
-                            <a id="dS" class='activateBtn' data-target='S' href='#'>south</a>
+                            It is dark, very dark.  There are exits to the  
+                            <a id="dN" class='activateBtn' data-target='N' href='#'>north</a>, 
+                            <a id="dE" class='activateBtn' data-target='E' href='#'>east</a> and 
                             <a id="dW" class='activateBtn' data-target='W' href='#'>west</a>                            
                         </div>
                     </div> 
