--- a/maze_b.html
+++ b/maze_b.html
@@ -59,7 +59,8 @@
                         </div>
                         <div class="descriptive" id="description">
                             The pitch black ducting gives way to swirling colours and a space full of bright lines and twisting shapes.
-                            You feel safe, there are no Grues lurking in the shadows.  The duct leads to the <a id="dW" class='activateBtn' data-target='W' href='#'>west</a> but the pulse of safety and freedom can be felt eminating from the <a id="dN" class='activateBtn' data-target='N' href='#'>north</a>.
+                            You feel safe, there are no Grues lurking in the shadows.  The duct leads to the <a id="dW" class='activateBtn' data-target='W' href='#'>west</a> 
+                            but the pulse of safety and freedom can be felt emanating from the <a id="dN" class='activateBtn' data-target='N' href='#'>north</a>.
                         </div>
                     </div> 
                     <div class="inventory">
