--- a/stairs11.html
+++ b/stairs11.html
@@ -60,7 +60,7 @@
                         </div>
                         <div class="descriptive" id="description">
                             It is dark back there and there is definately something moving in the corner.  You feel the hairs 
-                            on your arms stand on end.  On the floor there is a piece of <a id="dLOOK" class='activateBtn' data-target='LOOK' href='#'>paper</a>.
+                            on your arms stand on end.  On the floor there is a piece of <a id="dUSE" class='activateBtn' data-target='USE' href='#'>paper</a>.
                               If you feel very brave you could keep going <a id="dUP" class='activateBtn' data-target='UP' href='#'>up</a> and try and get out 
                               of the back exit.  Or you could turn around and head back <a id="dDOWN" class='activateBtn' data-target='DOWN' href='#'>down</a> the way you came.
                         </div>
