--- a/landing.html
+++ b/landing.html
@@ -60,7 +60,7 @@
                         </div>
                         <div class="descriptive" id="description">
                             Your senses were not wrong!  The thing in the corner is moving towards you.  The clatter of seats and the oncoming rush of
-                            foul air and then unimaginable force, falling, falling into the dark.  A distant <a class='activateBtn' data-target='DOWN' href='#'>noise</a> grows louder as everything goes black.
+                            foul air and then unimaginable force, falling, falling into the dark.  A distant <a id="dDOWN" class='activateBtn' data-target='DOWN' href='#'>noise</a> grows louder as everything goes black.
                         </div>
                     </div> 
                     <div class="inventory">
