--- a/lectern.html
+++ b/lectern.html
@@ -58,8 +58,8 @@
                             Lectern
                         </div>
                         <div class="descriptive" id="description">
-                            A laptop sits here, self-absorbed in a 'blue screen of death'.  The lectern has a screen which shows the time.  This area seems quite dusty and unused but there is
-                            a well worn path in the carpet leading back <a id="dW" class='activateBtn' data-target='W' href='#'>west</a> across the main stage.  Obviously created by animated lecturing.
+                            A laptop sits here, self-absorbed in a 'blue screen of death'.  The console has a small <a id="dUSE" class='activateBtn' data-target='USE' href='#'>screen</a> but otherwise the area seems unused and dusty.  There is
+                            however, a well worn path in the carpet leading back <a id="dW" class='activateBtn' data-target='W' href='#'>west</a> across the main stage.  Obviously created by animated lecturing.
                         </div>
                     </div> 
                     <div class="inventory">
