--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="modalish"></div>
     <div class="backimg">
         <div id="lectures" class="infoimage" onclick="location.href='lecture.html'">
-            <img src="./images/CheckInWebTechNoCode.png" alt="Student check in screen">
+            <img src="./images/CheckInStg1.png" alt="Student check in screen">
         </div>
     </div>
     <script>
