Endnig and other text changes

--- a/duct_exit.html
+++ b/duct_exit.html
@@ -58,13 +58,7 @@
                             Maze
                         </div>
                         <div class="descriptive" id="description">
-                            It is dark, very dark.
-                            <a id="dUP" class='activateBtn' data-target='UP' href='#'>up</a>
-                            <a id="dDOWN" class='activateBtn' data-target='DOWN' href='#'>down</a>
-                            <a id="dN" class='activateBtn' data-target='N' href='#'>north</a>
-                            <a id="dE" class='activateBtn' data-target='E' href='#'>east</a>
-                            <a id="dS" class='activateBtn' data-target='S' href='#'>south</a>
-                            <a id="dW" class='activateBtn' data-target='W' href='#'>west</a>                            
+                            You have made it out, congratulations!  You have beaten the deadLINE. 
                         </div>
                     </div> 
                     <div class="inventory">
