end screen changes

--- a/duct_exit.html
+++ b/duct_exit.html
@@ -58,7 +58,8 @@
                             Maze
                         </div>
                         <div class="descriptive" id="description">
-                            You have made it out, congratulations!  You have beaten the deadLINE. 
+                            You have made it out, congratulations!  You have beaten the <a id="dUSE" class='activateBtn' data-target='USE' href='#'>deadLINE</a>.
+                            <span class="lastline"><a id="dDOWN" class='activateBtn' data-target='DOWN' href='index.html'>...</a></span>
                         </div>
                     </div> 
                     <div class="inventory">
@@ -68,6 +69,5 @@
         </a-scene>
     </three60> 
     <script src="logic.js"></script>
-    <!--<script src="utility.js"></script>-->         
   </body>
 </html>
