Wording change and end.html added

--- a/end.html
+++ b/end.html
@@ -10,7 +10,7 @@
     <div class="blackin"></div>
     <three60>
         <a-scene xr-mode-ui="enabled: false">
-            <a-sky src="./images/balloon.JPG" rotation="0 -90 0"></a-sky>
+            <a-sky src="./images/maze.jpg" rotation="0 -90 0"></a-sky>
             <header id="header" class="header">
                 <div id="gtime" class="time"></div>
                 <div id="mtitle" class="mtitle"></div>
@@ -58,9 +58,15 @@
                             Maze
                         </div>
                         <div class="descriptive" id="description">
-                            Emerging from the dark you find yourself falling a short distance and hitting something hard.  It is so bright it takes you a few moments to adjust.
-                            When you do your second favourite fear kicks in.  You have somehow landed on the top of a hot air balloon, hundreds of feet off the ground.
-                            You can hang here as long as possible or let go and drop <a id="dDOWN" class='activateBtn' data-target='DOWN' href='#'>down</a> and see what happens.
+                            Show the deadLINE video                            
+                            <!--<a id="dUP" class='activateBtn' data-target='UP' href='#'>up</a>
+                            <a id="dDOWN" class='activateBtn' data-target='DOWN' href='#'>down</a>
+                            <a id="dN" class='activateBtn' data-target='N' href='#'>north</a>
+                            <a id="dE" class='activateBtn' data-target='E' href='#'>east</a>
+                            <a id="dS" class='activateBtn' data-target='S' href='#'>south</a>
+                            <a id="dW" class='activateBtn' data-target='W' href='#'>west</a>                            
+                            <a id="dUSE" class='activateBtn' data-target='USE' href='#'>use</a> 
+                            <a id="dLOOK" class='activateBtn' data-target='LOOK' href='#'>look</a>-->
                         </div>
                     </div> 
                     <div class="inventory">
